# redesmyn

./: .gitignore  .ruff.toml  .rustfmt.toml  Cargo.toml  Makefile  Pipfile  README.md  build.rs  pyrightconfig.json
.github/workflows/: docs.yml  tests.yml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/redesmyn/: Cargo.toml
crates/redesmyn-cascade/: Cargo.toml
crates/redesmyn-macros/: Cargo.toml
crates/redesmyn-macros/src/: lib.rs
crates/redesmyn/src/: artifacts.rs  cache.rs  common.rs  error.rs  handler.rs  lib.rs  logging.rs  main.rs  metrics.rs  predictions.rs  runtime.rs  schema.rs  server.rs
crates/rs-model-server/: Cargo.toml
crates/rs-model-server/src/: main.rs  predictions.rs
examples/: Cargo.toml  Makefile  model.py  pyproject.toml
examples/src/: main.rs
proto/: transform.proto
py-redesmyn/: Cargo.toml  Makefile  Pipfile  pyproject.toml  ruff.toml
py-redesmyn/docs/: conf.py
py-redesmyn/docs/_static/: style.css
py-redesmyn/docs/_templates/: sidebar-nav-bs.html
py-redesmyn/docs/_templates/autosummary/: class.rst  function.rst  module.rst
py-redesmyn/docs/src/: index.rst
py-redesmyn/docs/src/api-reference/: index.rst
py-redesmyn/docs/src/api-reference/schema/: index.rst
py-redesmyn/docs/src/api-reference/server/: index.rst
py-redesmyn/docs/src/user-guide/: index.rst
py-redesmyn/examples/iris/: Makefile  common.py  predict.py  pyproject.toml  serve.py  train.py
py-redesmyn/redesmyn/: artifacts.py  endpoint.py  logging.py  py_redesmyn.pyi  schema.py  server.py  service.py
py-redesmyn/src/: lib.rs
py-redesmyn/tests/: common.py  predictions.py  test_artifacts.py  test_endpoint.py  test_logging.py  test_server.py
py-redesmyn/tests/fixtures/: common.py  iris_model.py
py-redesmyn/tests/fixtures/models/mlflow/iris/903683212157180428/000449a650df4e36844626e647d15664/: meta.yaml
py-redesmyn/tests/fixtures/models/mlflow/iris/903683212157180428/000449a650df4e36844626e647d15664/artifacts/model/: model.pkl
py-redesmyn/tests/fixtures/models/mlflow/iris/903683212157180428/000449a650df4e36844626e647d15664/artifacts/model/metadata/: MLmodel
py-redesmyn/tests/fixtures/models/mlflow/iris/903683212157180428/000449a650df4e36844626e647d15664/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
scripts/: build.sh
src/: lib.rs  main.rs  predictions.rs
tests/: predictions.py
