[workspace]
resolver = "2"
members = ["examples", "crates/*", "py-redesmyn"]
default-members = ["examples", "crates/*"]

[workspace.package]
authors = ["David Gold <david.gold.a@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/davidagold/redesmyn"
repository = "https://github.com/davidagold/redesmyn"
readme = "./README.md"
license = "MIT"

[workspace.dependencies]
actix-web = "4"
polars = { version = "0.37.0", features = [
    "lazy",
    "dtype-struct",
    "partition_by",
] }
pyo3 = { version = "0.20.2", features = ["auto-initialize"]}
pyo3-polars = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "*", features = ["v4"] }

examples = { workspace = true, path = "examples" }
redesmyn = { workspace = true, path = "crates/redesmyn" }
redesmyn-macros = { workspace = true, path = "crates/redesmyn-macros" }
redesmyn-cascade = { workspace = true, path = "crates/redesmyn-cascade" }
py-redesmyn = { workspace = true, path = "py-redesmyn" }
