[package]
name = "examples"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "predictions-server"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
polars = { features = [
    "lazy",
    "dtype-struct",
    "partition_by",
], workspace = true }
pyo3 = { workspace = true }
pyo3-polars = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { features = ["rt-multi-thread", "macros"], workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["json", "env-filter"], workspace = true }
uuid = { workspace = true, features = ["v4"] }

redesmyn = { workspace = true }
redesmyn-macros = { workspace = true }
