[tool.poetry]
name = "redesmyn-examples"
version = "0.0.1"
description = "Example of Redesmyn ML server deployment."
authors = ["David Gold <david.gold.a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
polars = "^0.20.30"
more-itertools = "^10.2.0"
cachetools = "^5.3.3"
pydantic = "^2.7.2"
setuptools = "^70.0.0"
mlflow = "^2.13.0"
scikit-learn = "^1.5.0"
aiohttp = "^3.9.5"
lightgbm = "^4.4.0"
