[package]
name = "py-redesmyn"
edition = "2021"
authors.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
name = "redesmyn"
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.30"
polars = { workspace = true }
polars-core = "0.38.1"
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true, features = ["attributes", "tokio-runtime"] }
redesmyn = { workspace = true }
serde = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
