[package]
name = "py-redesmyn"
edition = "2021"
authors.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
name = "redesmyn"
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.30"
polars = { workspace = true }
polars-core = "0.41.0"
pyo3 = { workspace = true, features = [
    "experimental-async",
    "extension-module",
] }
serde = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

redesmyn = { workspace = true }
