[package]
name = "redesmyn-macros"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
thiserror = { version = "1.0.57", workspace = "true" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.49", features = ["full"] }
