[package]
name = "redesmyn"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
actix-web = { workspace = true }
arrow.workspace = true
futures = { workspace = true }
memmap = { workspace = true }
polars = { features = [
    "lazy",
    "dtype-struct",
    "partition_by",
], workspace = true }
prost = { workspace = true }
pyo3 = { workspace = true }
pyo3-polars = { workspace = true }
rayon = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
thiserror = { workspace = true }
tokio = { features = ["full"], workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["json", "env-filter"], workspace = true }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

redesmyn-macros = { workspace = true }
tower = "0.4.13"
heapless = "0.8.0"
smartstring = {version = "1.0.1", features = ["std", "serde"]}

[build-dependencies]
tonic-build = "0.11"
