[package]
name = "redesmyn"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
actix-web = { workspace = true }
heapless = "0.8.0"
polars = { features = [
    "lazy",
    "dtype-struct",
    "partition_by",
], workspace = true }
pyo3 = { workspace = true }
pyo3-polars = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
strum = { workspace = true, features = ["derive"]}
thiserror = { workspace = true }
tokio = { features = ["rt-multi-thread", "macros"], workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["json", "env-filter"], workspace = true }
uuid = { workspace = true, features = ["v4"] }

redesmyn-macros = { workspace = true }
