[package]
name = "redesmyn"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
actix-web = { workspace = true }
bytes = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true, default-features = false }
erased-serde = "0.4.4"
futures = { workspace = true, features = ["alloc"] }
heapless = "0.8.0"
indexmap = { workspace = true, features = ["serde"] }
lru = { workspace = true }
polars = { features = [
    "lazy",
    "dtype-struct",
    "partition_by",
], workspace = true }
pyo3 = { workspace = true, features = ["experimental-async"] }
pyo3-polars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value", "indexmap"] }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { features = ["rt-multi-thread", "macros"], workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["json", "env-filter"], workspace = true }
uuid = { workspace = true, features = ["v4"] }

redesmyn-macros = { workspace = true }
