[package]
name = "rs-model-server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "../../README.md"
repository = { workspace = true }

[dependencies]
actix-web = "4"
arrow = {workspace = "true" }
futures = {workspace = "true" }
memmap = {workspace = "true" }
polars = { workspace = "true", features = ["lazy", "dtype-struct", "partition_by"]}
pyo3 = { workspace = "true"}
pyo3-polars = { workspace = "true"}
rayon = { workspace = "true"}
serde = { workspace = "true", features = ["derive"] }
serde_json = { workspace = "true"}
thiserror = { workspace = "true"}
tokio = { workspace = "true", features = ["full"] }
tracing = { workspace = "true" }
tracing-subscriber = { workspace = "true", features = ["json", "env-filter"]}
uuid = { workspace = "true", features = ["v4"]}
