[tool.poetry]
name = "redesmyn-examples-iris"
version = "0.0.1"
description = "Example of using Redesmyn to serve a Lasso model trained against the iris dataset."
authors = ["David Gold <david.gold.a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
mlflow = "^2.13.0"
polars = "^0.20.30"
scikit-learn = "^1.5.0"
more-itertools = "^10.2.0"
aiohttp = "^3.9.5"
annotated-types = "^0.7.0"
pydantic = "^2.7.3"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.1"
toml = "^0.10.2"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
